JAVA-30208: Adding spring-hibernate-5 module back